--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,12 @@
     <div class="container">
         <nav class="nav">
             <a href="/" class="nav__link" data-link>Home</a>
+            <a href="#" class="nav__link">|</a>
             <a href="/todo" class="nav__link" data-link>Todo</a>
-            <a href="/settings" class="nav__link" data-link>Settings</a>
+            <!--        <a href="/settings" class="nav__link" data-link>Settings</a> -->
         </nav>
         <div id="app"></div>
+        <div id="my-list"></div>
     </div>
 </body>
 
